Travis CI now has bionic which should work fine as it has librdkafka of version 0.11.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: c
 compiler:
     - clang
     - gcc
-dist: xenial
+dist: bionic 
 env:
   - NGX_KAFKA_LOG_MODULE=--add-module=$TRAVIS_BUILD_DIR
   - NGX_KAFKA_LOG_MODULE=--add-dynamic-module=$TRAVIS_BUILD_DIR
